# games102_relevant_code

./: README.md
hw01/: CMakeLists.txt  main.cpp  run.sh
hw01/include/: fitting.hpp  matplotlibcpp.h
hw02/: main.py
hw03/: main.py
